--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 edition = "2018"
 license = "BSD-3-Clause"
+repository = "https://github.com/nicholasbishop/zone-detect-rs"
 
 [dependencies]
 thiserror = "1.0"
