Turn off all default features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ description = "Rust version of the ZoneDetect C library."
 keywords = ["time", "zone", "timezone"]
 
 [dependencies]
-thiserror = "1.0"
+thiserror = { version = "1.0", default_features = false }
 
 [dev-dependencies]
-clap = "2.33"
-rand = "0.7"
-structopt = "0.3"
+clap = { version = "2.33", default_features = false }
+rand = { version = "0.7", default_features = false }
+structopt = { version = "0.3", default_features = false }
