--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ thiserror = { version = "1.0.29", default_features = false }
 
 [dev-dependencies]
 clap = { version = "2.33.3", default_features = false }
-rand = { version = "0.8.4", default_features = false }
+rand = { version = "0.8.4", default_features = false, features = ["std_rng"] }
 structopt = { version = "0.3.23", default_features = false }
