--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zone-detect"
-version = "1.0.0"
+version = "1.0.1-alpha.0"
 authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
 edition = "2018"
 license = "BSD-3-Clause"
