--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
       - run: sudo apt-get install llvm-dev
       - uses: actions-rs/cargo@v1
         with:
@@ -24,6 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
       - run: sudo apt-get install llvm-dev
       - uses: actions-rs/cargo@v1
         with:
@@ -45,6 +47,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
       - run: rustup component add clippy
       - run: sudo apt-get install llvm-dev
       - uses: actions-rs/cargo@v1
@@ -57,6 +60,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
       - uses: actions-rs/cargo@v1
         env:
           RUSTDOCFLAGS: -Dwarnings
