--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zone-detect"
-version = "1.0.1-alpha.0"
+version = "1.0.1"
 edition = "2021"
 license = "BSD-3-Clause"
 repository = "https://github.com/nicholasbishop/zone-detect-rs"
